# VirtualAssistant_PseudoJarvisV2

./: Jarvis.py  LICENSE  README.md  main.py  pyproject.toml
modules/: AlarmModule.py  MusicModule.py  OpenModule.py
